@@ -2,23 +2,20 @@
 
 ## Overview
 
-In this 10-minutes lab, you will use *Records*, a Java language feature going through a second preview round in JDK 15.
+In this 10-minutes lab, you will use *Records*, a new Java language feature that went through 2 preview rounds (JDK 14, JDK 15), and is, starting Java 16, a final and permanent feature.
 
-Records provide a compact syntax for declaring classes which are transparent holders for shallowly immutable data.
-A record can be best thought of as a nominal tuple that enables us to easily and quickly model immutable "plain data" aggregates.
+Records provide a compact syntax for declaring classes which are transparent holders for shallowly immutable data. A record can be best thought of as a nominal tuple that enables us to easily and quickly model immutable "plain data" aggregates.
 
 ## A simple Record
 
-💡 Make sure that Preview Features are enabled, see [Lab 4](/?lab=lab-4-java-se-preview-features).
 
-
-Similar to enums, Records are technically a special form of classes optimized for certain specific situations.
+Similar to enums, Records are technically a special form of classes optimized for a specific situation, i.e. modeling data aggregates.
 
 1. Create a Person record
 
 Create a `Person.java` class with the following content.
 
-`cd ~ && nano Person.java`
+➥ `cd ~ && nano Person.java`
 
 ```
 public record Person(String lastname, String firstname) {}
@@ -26,11 +23,8 @@ public record Person(String lastname, String firstname) {}
 
 2. Compile the Person record
 
-Given Records are still in preview, make sure to enable Preview Feature at compile time.
 
-```
-javac --enable-preview --release 15 Person.java
-```
+➥ `javac Person.java`
 
 3. Decompile the Person record
 
@@ -52,18 +46,18 @@ public final class Person extends java.lang.Record {
   public java.lang.String firstname();
 }
 ```
-This Record has 
+We can observe that this Record has 
 
 * 2 private final fields (`lastname` and `firstname`), i.e. the Record's components, they are immutable
-* a public constructor taking 2 parameters
-* 3 'common' methods implementations: `toString()`, `hashCode()` and `equals(java.lang.Object)`
+* a public constructor taking 2 parameters that match the Record's components: `lastname` and `firstname`.
+* 3 'common' methods implementations: `toString()`, `hashCode()` and `equals()`
 * 2 public accessor methods aptly named `lastname()` and `firstname()` to access the Record's components
 
-You can also observe that the Person record extends the [`java.lang.Record`](https://docs.oracle.com/en/java/javase/14/docs/api/java.base/java/lang/Record.html) abstract class.
+In addtion, we can see that the Person record extends the [`java.lang.Record`](https://docs.oracle.com/en/java/javase/14/docs/api/java.base/java/lang/Record.html) abstract class.
 
 To use the Record simply create a simple `TestRecord.java` class.
 
-`nano TestRecord.java`
+➥ `nano TestRecord.java`
 
 ```
 class TestRecord {
@@ -75,14 +69,12 @@ class TestRecord {
 }
 ```
 
-Compile and run the class.
+Compile and run the test class.
 
 ```
-> javac --enable-preview --source 15 TestRecord.java
-Note: TestRecord.java uses preview language features.
-Note: Recompile with -Xlint:preview for details.
+> javac TestRecord.java
 
-> java --enable-preview TestRecord
+> java TestRecord
 Person[lastname=Doe, firstname=Jane]
 ```
 
@@ -109,7 +101,7 @@ Person{firstname=Jane, lastname=Doe}
 
 ## A Speaker Record
 
-Back to the Conference application (`cd ~/odl-java-hol`), it exposes simple REST endpoints to get speaker-related information.
+Back to the Conference application (`cd ~/odl-java-hol`). It exposes simple REST endpoints to get speaker-related information.
 
 * http://{public-ip-address}:8080/speakers ➞ Get all speakers 
 
@@ -125,15 +117,15 @@ Back to the Conference application (`cd ~/odl-java-hol`), it exposes simple REST
 Browse the source code to understand how things work.
 
 
-* `Main.java` defines the routings, including the "/speakers" path and its `speakerService` handler class.
+* `Main.java` defines the routings, including the `"/speakers"` path and its related `speakerService` handler.
 
-* `SpeakerService.java` defines the various handlers under the "/speakers" path.
+* `SpeakerService.java` defines the various handlers under the `"/speakers"` path, ex. `"/speakers/lastname"`, `"/speakers/company"`, etc.
 
-The `Speaker.java` class is interesting as it models the Speaker type with all its details (last name, first name, etc.), i.e. it is data aggregate that represents a speaker. Once created a speaker is effectively immutable as the class is `final', moreover there is no way to change the fields (ex. private fields, no setters).
+The `Speaker.java` class is interesting as it models the Speaker type with all its details (last name, first name, etc.), i.e. it is a data aggregate that represents a speaker. Once created a speaker is effectively immutable as the class is `final`. Moreover there is no way to change the fields (ex. all fields are `private` and there are no setters).
 
-Migrating this regular class into a Record is straightforward. Just replace the `Speaker.java` class content with the definition of the Speaker record. That definition should include the various components related to a speaker. 
+Migrating this regular class into a Record is straightforward. Just replace the `Speaker.java` class content with the definition of the Speaker record. That definition should include the different components related to a speaker. 
 
-`nano src/main/java/conference/Speaker.java`
+➥ `nano src/main/java/conference/Speaker.java`
 
 ```
 package conference;
@@ -145,10 +137,10 @@ public record Speaker (String id,
                        Track track) {}
 ```
 
-💡 The Java compiler will automatically generate a default constructor implementation. If needed, this constructor can be customized. Also, a `toString`, an `equals`, and a `hashCode` default implementations will be generated. If required, those implementations can be overridden. Finally, the Java compiler will also generate accessor methods for each component of the Record.
+💡 The Java compiler will automatically generate a default constructor. If needed, this constructor can be customized. Moreover, the compiler will also generate default implementations of the `toString`, the `equals`, and the `hashCode` methods. If required, those default implementations can be overridden. Finally, the Java compiler will also generate accessor methods for each component of the Record.
 
 
-If you now compile the application, you will get multiple errors. Can you guess why?
+If you now compile the application (`mvn package`), you will get multiple errors. Can you guess why?
 
 ```
 …src/main/java/conference/SpeakerRepository.java:[52,69] cannot find symbol
@@ -160,12 +152,11 @@ If you now compile the application, you will get multiple errors. Can you guess 
 …
 ```
 
-Those errors make sense as the (old) `Speaker.java` class was using the Javabean getter convention to provide access to its private field. Records on the other hand rely on (automatically generated) accessor methods to enable access to its various components. So that needs to be fixed in the conference application code! Go through the `SpeakerRepository.java` class and make sure to use accessor methods for accessing components instead of getters. This needs to be fixed code accessing any components of the Speaker record (lastName, company, etc.).
+Those errors make sense as the `Speaker.java` class is using the old [JavaBeans](https://docs.oracle.com/javase/tutorial/javabeans/writing/properties.html) getter convention to provide access to its private fields. Records on the other hand rely on (automatically generated) accessor methods to enable access to its various (immutable) components. So that needs to be fixed in the conference application code! Go through the `SpeakerRepository.java` class and make sure to use accessor methods for accessing components instead of getters. This needs to be fixed for all components of the Speaker record (lastName, company, etc.).
 
+
+➥ `nano src/main/java/conference/SpeakerRepository.java`
 For example, change 
-
-`nano src/main/java/conference/SpeakerRepository.java`
-
 ```
 public List<Speaker> getAll() {
    List<Speaker> allSpeakers = speakers.stream()
@@ -183,16 +174,76 @@ public List<Speaker> getAll() {
    return allSpeakers;
 }
 ```
-The application will now compile fine but if you test it, you will not get any result!
-
-The (old) `Speaker.java` class was relying on Helidon JSONB support. The issue you are facing is that Record is a fairly recent feature, and not all JSONB frameworks support them. The good news is that things are changing rapidly, ex. Apache Johnson, and Jackson will soon offer full Record support.
-
-In the meantime, you can easily fix this by updating the Speaker record to return, using the JSONP API, a JSON representation of its various components.
 
 
-1. Add the following `toJson` method to the `Speaker.java` record.
+Compile the application and test it (ex. http://{public-ip-address}:8080/speakers). You will notice that the application now works but it doesn't return any data!?
 
-`nano src/main/java/conference/Speaker.java`
+The `Speaker.java` class is relying on the JSONB (JSON Binding) API support to automatically marshall Java objects to their equivalent JSON representations. The issue you are facing is that Record is a fairly recent feature. Not all JSONB providers support them yet. For example Eclipse Yasson, Helidon default JSONB provider, doesn't support them yet. That explains why the returned results are empty. The good news is that things are evolving rapidly, ex. Apache Johnson, and Jackson are already supporting Records, and more will follow.
+
+
+To fix this problem, we simply need to use a JSONB provider that supports Records, ex. Jackson v2.12 or greater. 
+
+Add the following Jackson dependency in the `pom.xml`
+
+```
+<dependency>
+    <groupId>io.helidon.media</groupId>
+    <artifactId>helidon-media-jackson</artifactId>
+</dependency>
+```
+
+💡 This lab uses the latest version of Helidon (2.2.1) which in turn uses Jackson v2.12, so you're good to go! If you happen to use an older Helidon version, you can manually bump the Jackson version by updating the application `pom.xml` as follow.
+
+
+```
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>2.12.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.12.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+```
+
+The last thing you need to do is instructing the application to use Jackson as its JSONB provider. 
+
+➥ `nano src/main/java/conference/Main.java`
+
+Simply replace
+``` 
+   .addMediaSupport(JsonbSupport.create())
+```
+with
+```
+   .addMediaSupport(JacksonSupport.create())
+```
+and update the import's
+
+```
+import io.helidon.media.jackson.JacksonSupport;
+```
+
+Compile the application and test it again (ex. http://{public-ip-address}:8080/speakers), it now works!
+
+You can notice that using Records leads to a more concise, more readable code when it comes to model data aggregates! Moreover, more and more frameowrks are adding support (ex. Jackson). Overal, this leads to simple and clean code. 
+
+## A Speaker Record with JSONP (optional)
+
+
+In the previous exercise, we have used Jackson for its ability to automatically marshall Java objects, including records instances, to equivalent JSON representations. Another approach would be to use the JSONP API to manually construct a JSON representation from a record. 
+
+This can be done by adding the following `toJson` method to the `Speaker.java` record.
+
+➥ `nano src/main/java/conference/Speaker.java`
 
 ```
 JsonObject toJson() {
@@ -208,18 +259,18 @@ JsonObject toJson() {
 }
 ```
 
-💡 Make sure to update the `import`'s accordingly.
+💡 Make sure to update the Record class's `import`'s accordingly.
 
 ```
 import javax.json.Json;
 import javax.json.JsonObject;
 ```
 
-2. Update the code to return a List of `JsonObject` instead of List of `Speaker`.	
+and update the code to return a List of `JsonObject` instead of List of `Speaker`.	
 
 For example, update update the `getAll` method in the the `SpeakerService.java` class
 
-`nano src/main/java/conference/SpeakerService.java` 
+➥ `nano src/main/java/conference/SpeakerService.java` 
 
 ```
 List<Speaker> allSpeakers = this.speakers.getAll();
@@ -237,19 +288,19 @@ if (allSpeakers.size() > 0) {
 } else Util.sendError(response, 400, "getAll - no speaker found!?");
 ```
 
-If you build and test the application, it should behave like before.
 
-You can notice that using Records leads to a more concise, more readable code when it comes to model data aggregates! Shortly, when JSONB frameworks will support Records, the marshaling/unmarshaling between JSON payload and Records will be transparent. That will again simplify things as you won't have to use the JSONP API to add to the Record, a method to return its JSON representation!
+📝 Make sure to do this for all `SpeakerService.java` methods (`getByCompany`, `getByTrack`, `getSpeakersById`) as you just did for the `getAll` method.
 
-📝 Make sure to add support Records to all `SpeakerService.java` methods (`getByCompany`, `getByTrack`, `getSpeakersById`) as you just did for the `getAll` method.
+
+This approach, while more cumbersome, shows that methods can be added to customize records.
 
 
 ## Local Records (optional)
 
 
-When you are developing applications, think how many times you are creating intermediate values that are a simple group of variables? That should be very frequent! The Record feature is perfect to cope with such use-case.
+When you are developing applications, think how many times you are creating intermediate values that are a simple group of variables? That should be very frequent! The Record feature is perfect to cope with such a use-case.
 
-Local Record is a feature introduced in the second Record preview in JDK 15. Local Records offer a convenient option to declare a record inside a method, close to the code which manipulates the variables.
+Local Record is a feature introduced in the second Record preview in JDK 15. Local Records offer a convenient option to declare a record inside a method, close to where it is used.
 
 For this exercise, let's pretend that you want to return a simpler form of Speaker, ex. just the last name/first name pair and the company.
 
@@ -261,29 +312,15 @@ For this exercise, let's pretend that you want to return a simpler form of Speak
 record SpeakerSummary(String last, String first, String company) {}
 ```
 
-2. Add it a `toJson` method 
-
-```
-record SpeakerSummary(String last, String first, String company) {
-   JsonObject toJson() {
-      JsonObject payload = Json.createObjectBuilder()
-            .add("speaker", first() + " " + last())
-            .add("company", company())
-            .build();
-      return payload;
-   }
-}
-```
-
-3. Adapt the the `getAll` method to create, using the Streams API, a list of `SpeakerSummary` instead of a list of `Speaker`. 
+2. Adapt the the `getAll` method to create, using the Streams API, a list of `SpeakerSummary` instead of a list of `Speaker`. 
 
 
 ```
 List<Speaker> allSpeakers = this.speakers.getAll();
 if (allSpeakers.size() > 0) {
-   response.send(allSpeakers.stream()
-              .map(s -> new SpeakerSummary(s.lastName(), s.firstName(), s.company()).toJson())
-              .collect(Collectors.toList()));
+      response.send(allSpeakers.stream()
+         .map(s -> new SpeakerSummary(s.lastName(), s.firstName(), s.company()))
+         .collect(Collectors.toList()));
 } else Util.sendError(response, 400, "getAll - no speaker found!?");
 ```
 
@@ -297,15 +334,42 @@ If you now test the endpoint, you will get the shorter speaker representation (s
 📝 Make sure to update all `SpeakerService.java` methods for the new `SpeakerSummary` record. As an additional exercise, try to create different Records.
 
 
+## Stream.toList()
+
+Each new Java release comes with a set of new Java language features (ex. Records in JDK 16), with JDK enhancements (ex. the jpackage in JDK 16). But this is just the tip of the iceberg! In addition to bug and security fixes, there are many smaller improvements done across the platform, from the HotSpot JVM to the Core libraries. And Java 16 is no exception to this rule!
+
+One example is the new [java.util.stream.toList()](https://download.java.net/java/early_access/jdk16/docs/api/java.base/java/util/stream/Stream.html#toList()) method introduced in Java 16 which returns an immutable List containing the elements of a stream.
+
+`nano src/main/java/conference/SpeakerService.java`
+
+For example, we could replace the terminal operation 
+
+```
+    response.send(allSpeakers.stream()
+       .map(s -> new SpeakerSummary(s.lastName(), s.firstName(), s.company()))
+       .collect(Collectors.toList()));
+```
+
+with this new method
+
+```
+    response.send(allSpeakers.stream()
+       .map(s -> new SpeakerSummary(s.lastName(), s.firstName(), s.company()))
+       .toList());
+```
+
+💡 Make sure to read the [javadoc](https://download.java.net/java/early_access/jdk16/docs/api/java.base/java/util/stream/Stream.html#toList()) to understand when and where this method could be used instead of a more traditional collector.
+
+
 ## Wrap-up
 
 In this exercise, you have used Records. 
 
-Records allow to easily and quickly create immutable data aggregates. Records are currently in a preview feature in JDK 15 (second preview round) and are slated to be made final and permanent in Java 16, in March 2021.
+Records allow to easily and quickly create immutable data aggregates. Records went through 2 previes rounds (Java 14 & Java 15) and are slated to be made final and permanent in Java 16.
 
 For more details on Records, please check the following resources.
 
-* [JEP 384: Records (2nd Preview)](https://openjdk.java.net/jeps/384)
+* [JEP 395: Records](https://openjdk.java.net/jeps/395)
 * [Java Feature Spotlight: Records](https://inside.java/2020/02/04/spotlightrecords/)
 
 
